# team-memory-rbac

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CONTEXT.md  DESIGN-NOTES.md  Dockerfile  compose.hermes.yaml  compose.yaml  package-lock.json  package.json  pyproject.toml  tsconfig.json
.obsidian/: workspace.json
config/: team-memory.hermes-local.json  team-memory.local.json  team-memory.server-local.json  team-memory.service.json
contracts/: team-memory-rbac.schema.json
scripts/: bootstrap-root-admin.mjs  check-dependencies.mjs  check-runtime-config.mjs  clear-hermes-test-memories.ps1  clear-test-memory.mjs  dev-init.mjs  dev-server.mjs  generate-contracts.mjs  hermes-local-smoke.mjs  local-host-smoke.mjs  local-memory-tool.mjs  openclaw-team-memory.mjs  redeploy-hermes-tests.ps1  runtime-config-args.mjs  smoke-dev.mjs  team-memory-mcp.mjs  team-memory.mjs  validate-migrations.mjs
src/: index.ts  permission-router.ts
test/: agent-session.test.ts  agent-tool-adapters.test.ts  authorized-retrieval.test.ts  bootstrap-root-admin.test.ts  cloud-memory-authority.test.ts  compose-hermes-config.test.ts  durable-local-replica.test.ts  fixtures.contract.test.ts  generated-schema.contract.test.ts  hermes-docker-entrypoint.test.ts  hermes-memory-plugin.test.ts  history-and-store-seams.test.ts  history-authority.test.ts  host-lifecycle-adapters.test.ts  http-mcp-gateway.test.ts  http-production-guardrails.test.ts  immediate-recall.test.ts  ingestion-pipeline.test.ts  legacy-postgres-cloud-memory-authority.test.ts  lifecycle-memory-extractor.test.ts  (+24 more)
(+169 files in other folders)
