[project]
name = "team-memory-rbac-hermes"
version = "0.1.0"
description = "Hermes Python adapter for Team Memory RBAC"
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src.adapters.hermes*"]
